--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/sweater?serverTi
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.generate-ddl=true
+
+spring.freemarker.expose-request-attributes=true
